<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="6dp"
    android:layout_marginStart="6dp"
    android:layout_marginEnd="6dp"
    app:cardCornerRadius="8dp">
   <RelativeLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content">
    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/airindia"
        android:id="@+id/flightImage"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/flightImage" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/flight"
        android:layout_below="@id/flightImage"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/flight"
        android:layout_marginBottom="8dp"/>

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:id="@+id/deptTime"
           android:text="@string/_20_00"
           android:layout_centerVertical="true"
           android:layout_toEndOf="@id/flightImage"
           android:layout_marginStart="50dp"
           android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
           />
       <ImageView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:src="@drawable/arrow"
           android:id="@+id/arrow"
           android:layout_toEndOf="@id/deptTime"
           android:layout_centerVertical="true"
           android:layout_marginStart="8dp"
           android:contentDescription="@string/arrow" />
       <TextView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:id="@+id/arrTime"
           android:layout_centerVertical="true"
       android:text="@string/_21_00"
           android:layout_toEndOf="@id/arrow"
           android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
           android:layout_marginStart="8dp"/>
       <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/frCode"
        android:layout_below="@id/deptTime"
           android:layout_marginTop="24dp"
           android:layout_marginStart="60dp"
           android:layout_toEndOf="@id/flightImage"
        android:text="@string/maa"/>

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:id="@+id/hrs"
           android:layout_toEndOf="@id/frCode"
           android:layout_below="@id/arrow"
           android:layout_marginStart="17dp"
           android:layout_alignBaseline="@id/frCode"
           android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
           android:text="@string/_2"/>


       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:id="@+id/hrsText"
           android:layout_toEndOf="@id/hrs"
           android:layout_below="@id/arrow"
           android:layout_marginStart="2dp"
           android:layout_alignBaseline="@id/hrs"
           android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
           android:text="@string/hrs"/>


       <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/hrsText"
           android:layout_toEndOf="@id/hrsText"
           android:layout_below="@id/arrTime"
           android:layout_marginStart="16dp"
        android:id="@+id/tCode"
        android:text="@string/bom"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/price"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:layout_marginEnd="20dp"
        android:text="@string/_21_001"/>


       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:id="@+id/dash"
           android:layout_alignParentEnd="true"
           android:layout_marginEnd="4dp"
           android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
           android:layout_centerVertical="true"
           android:text="@string/dash"/>



   </RelativeLayout>

</android.support.v7.widget.CardView>